# openstackoid

./: .gitignore  .gitmodules  Pipfile  README.org  Vagrantfile  default.nix  inventory-all-in-one  make-env.sh  provision.yml  scope.yml  setup-env.sh  setup.cfg  setup.yml
RegionOne/: Vagrantfile  regionOne.yaml
RegionTwo/: Vagrantfile  regionTwo.yaml
examples/: dispatcher.py  interpreter.py
misc/: DEBUG.org  auth.json  examples.sh  openstack-image-list.sh  openstackoid.sh  tests.py
oidinterpreter/: README.org  setup.py
oidinterpreter/oidinterpreter/: __init__.py  oidinterpreter.py
oidinterpreter/tests/: __init__.py  tests_monkeypatch.py  tests_oidinterpreter.py
openstackoid/: configuration.py  dispatcher.py  interpreter.py  keystoneauth1.py  keystonemiddleware.py  shell.py  utils.py
openstackoid/client/: image.py  server.py
openstackoid/http/: headers.py  hooks.py  request.py  send.py
patches/haproxy/: haproxy.cfg  haproxy.cfg.j2  services.conf
patches/systemd/: devstack@g-api.service.j2  devstack@g-reg.service.j2  devstack@keystone.service.j2  devstack@n-api-meta.service.j2  devstack@n-api.service.j2  devstack@n-cauth.service.j2  devstack@n-cond-cell1.service.j2  devstack@n-cpu.service.j2  devstack@n-novnc-cell1.service.j2  devstack@n-sch.service.j2  devstack@n-super-cond.service.j2  devstack@placement-api.service.j2  devstack@q-agt.service.j2  devstack@q-dhcp.service.j2  devstack@q-l3.service.j2  devstack@q-meta.service.j2  (+2 more)
playbooks/: devstack.yml  ha-scope.yml  os-scope.yml
python-openstackoidclient/: setup.py
tests/: test_configuration.py
(+16 files in other folders)
