[metadata]
name = openstackoid
version = 0.0.1
summary = Collaborative OpenStack Clouds on Demand
keywords =
    OpenStack
    reproducible research
    Grid5000
licence = GPL-3.0
license_file = LICENSE
url = https://gitlab.inria.fr/discovery/openstackoid
author = Discovery Open Science Initiative
author_email = discovery-dev@inria.fr
long_description = file: README.org
classifier =
    Development Status :: 3 - Alpha
    Environment :: OpenStack
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Distributed Computing

[files]
packages =
    openstackoid

[options]
include_package_data = True

install_requires =
    requests
    six
    dataclasses

[options.entry_points]
openstack.cli.base =
    openstackoid=openstackoid.shell

[options.packages.find]
exclude =
    docs
    misc

[bdist_wheel]
universal=1
